# MLDLMother

./: .gitignore  README.md
Project_BreastCancer/BreastCancerUsingML/: AMF.py  README.md  Random_forest_classifier.py  SVM_classifier.py  VGG16.py  alexnet.py  augmentation.py  check_info.py  cross_validation_pnn.py  densenet121.py  enhanced_NN_classifier.py  enhanced_breast_cancer_app.py  enhanced_feature_extraction.py  feature_corr.py  features_augmented__pca.csv  features_augmented_pca_balanced.csv  features_segmented_pca.csv  features_segmented_wo_pca.csv  features_top10.csv  features_wholeimage_pca.csv  features_wo_pca_wholeimg.csv  folder_spilitting.py  gmm.py  hyper_param_tune.py  inceptionv3.py  main.ipynb  main.py  pnn_classifier.py  resnet18.py  rf_svm_nn_cv.py  roi_labeling.py  roi_labels.csv  segmentation.py  undersampling.py
Project_BreastCancer/BreastCancerUsingML/processed_new/: features_augmented__pca.csv
Project_FederatedLearning/federatedlearningapp/: README.md  pyproject.toml
Project_FederatedLearning/federatedlearningapp/federatedlearningapp/: __init__.py  client_app.py  server_app.py  smoketest_client.py  smoketest_task.py  task.py
Project_IrishFlower/: README.md  iris_classification.ipynb
